--- a/PlantAlarm/Views/RootPages/TasksPage.xaml
+++ b/PlantAlarm/Views/RootPages/TasksPage.xaml
@@ -44,6 +44,61 @@
                     </StackLayout>
                 </customControls:ShadowLayout>
 
+                <StackLayout Grid.Row="1" VerticalOptions="FillAndExpand" Margin="0,5,0,0">
+                    <CollectionView ItemsSource="{Binding PlantTasks}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <customControls:ShadowLayout OffsetY="3" ShadowRadius="4" ShadowOpacity="0.4" Padding="10,0,10,3" Margin="0,5">
+                                    <customControls:GradientStackLayout GradientFromColor="#FBED83" GradientToColor="#F7DC67" GradientDirection="ToRight"
+                                                                        HeightRequest="75" Padding="7">
+                                        
+                                        <StackLayout.Effects>
+                                            <customEffects:RoundedCornerEffect Radius="8" />
+                                        </StackLayout.Effects>
+                                        <StackLayout.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding ShowTaskDetailsPageCommand}" />
+                                        </StackLayout.GestureRecognizers>
+
+                                        <StackLayout Orientation="Horizontal" VerticalOptions="Start">
+                                            <Label Text="{Binding Task.Name}" FontAttributes="Bold" FontSize="17" HorizontalOptions="Fill" VerticalOptions="End"
+                                                   LineBreakMode="TailTruncation" TextColor="#43390D" />
+                                            <Label Text="{Binding NextIncompleteOccurrenceString}" FontAttributes="{Binding NextOccurrenceFontStyle}" FontSize="13"
+                                                   TextColor="{Binding NextOccurrenceColor}" HorizontalOptions="EndAndExpand" VerticalOptions="End"/>
+                                        </StackLayout>
+
+                                        <BoxView HeightRequest="1" BackgroundColor="#C8AA26" Margin="-2,-2,-2,0"/>
+
+                                        <StackLayout VerticalOptions="FillAndExpand">
+                                            <CollectionView ItemsSource="{Binding Plants}" VerticalOptions="Center">
+                                                <CollectionView.ItemsLayout>
+                                                    <LinearItemsLayout Orientation="Horizontal" ItemSpacing="4"/>
+                                                </CollectionView.ItemsLayout>
+
+                                                <CollectionView.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <customControls:ShadowLayout WidthRequest="45" HeightRequest="47" VerticalOptions="Center" ShadowOpacity="0.3"
+                                                                                     OffsetY="2" ShadowRadius="3" Padding="0,0,0,2">
+                                                            <customControls:ShadowLayout.Effects>
+                                                                <customEffects:RoundedCornerEffect Radius="4" />
+                                                                <customEffects:BorderEffect Thickness="1.5" Color="#86711A" />
+                                                            </customControls:ShadowLayout.Effects>
+
+                                                            <customControls:SquaredImage Source="{Binding PrimaryPhoto.Url}" Margin="0,0,0,0" HeightRequest="45" Opacity="0.9"
+                                                                                         BackgroundColor="#F5D341" VerticalOptions="Center" Aspect="AspectFill">
+                                                            </customControls:SquaredImage>
+
+                                                        </customControls:ShadowLayout>
+                                                    </DataTemplate>
+                                                </CollectionView.ItemTemplate>
+                                            </CollectionView>
+                                        </StackLayout>
+
+                                    </customControls:GradientStackLayout>
+                                </customControls:ShadowLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </StackLayout>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
