--- a/PlantAlarm/Views/TaskDetailsPage.xaml
+++ b/PlantAlarm/Views/TaskDetailsPage.xaml
@@ -1,5 +1,164 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="PlantAlarm.Views.TaskDetailsPage">
+<rootpages:SafeAreaRespectingPage  xmlns:rootpages="clr-namespace:PlantAlarm.Views.RootPages"
+                                   xmlns="http://xamarin.com/schemas/2014/forms"
+                                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                                   x:Class="PlantAlarm.Views.TaskDetailsPage"
+                                   xmlns:customControls="clr-namespace:PlantAlarm.CustomControls"
+                                   xmlns:customEffects="clr-namespace:PlantAlarm.Effects"
+                                   xmlns:behaviors="clr-namespace:PlantAlarm.Behaviors">
     <ContentPage.Content>
+        <StackLayout BackgroundColor="#FEFAEC" Margin="0">
+            <StackLayout.Effects>
+                <customEffects:SafeAreaEffect />
+            </StackLayout.Effects>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <!--TOOLBAR-->
+                <customControls:ShadowLayout OffsetY="3" ShadowRadius="2" ShadowOpacity="0.3" Padding="0,0,0,2" Grid.Row="0">
+                    <StackLayout Orientation="Horizontal" BackgroundColor="#FEFAEC" Padding="11,2">
+
+                        <Grid HorizontalOptions="FillAndExpand">
+                            <!--LEFT TOOLBAR-->
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                                <Button Text="← Back" FontSize="16" Command="{Binding BackCommand}" HorizontalOptions="Start" 
+                                        FontAttributes="Bold" TextColor="#C8AA26" Margin="0,3"/>
+                            </StackLayout>
+
+                            <!--MIDDLE PART-->
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                                <Label Text="Task Details" FontSize="18" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black" />
+                            </StackLayout>
+
+                            <!--RIGHT TOOLBAR-->
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="End">
+                                <Button Text="Cancel" FontSize="16" Command="{Binding CancelCommand}" HorizontalOptions="End" 
+                                        FontAttributes="Bold" TextColor="Red" Margin="5,3" IsVisible="{Binding IsEditing}"/>
+                                <Button Text="Save" FontSize="16" Command="{Binding SaveCommand}" HorizontalOptions="End" 
+                                        FontAttributes="Bold" TextColor="#C8AA26" Margin="5,3" IsVisible="{Binding IsEditing}"/>
+                                <Button Text="Edit" FontSize="16" Command="{Binding EditCommand}" HorizontalOptions="End" 
+                                        FontAttributes="Bold" TextColor="#C8AA26" Margin="0,3" IsVisible="{Binding IsNotEditing}"/>
+                            </StackLayout>
+                        </Grid>
+                        
+                    </StackLayout>
+                </customControls:ShadowLayout>
+
+                
+
+                <StackLayout Grid.Row="1" VerticalOptions="FillAndExpand" Margin="0,5,0,0">
+
+                    <customControls:ShadowLayout ShadowOpacity="0.3" ShadowRadius="3" OffsetY="2" Padding="0,0,0,2" Margin="10,0,10,0">
+                        <customControls:GradientStackLayout GradientDirection="ToTopRight" GradientFromColor="#F4CF2E" GradientToColor="#DEBD2A" Padding="7">
+                            <customControls:GradientStackLayout.Effects>
+                                <customEffects:RoundedCornerEffect Radius="8" />
+                            </customControls:GradientStackLayout.Effects>
+                            <Grid HeightRequest="30">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="3*" />
+                                    <ColumnDefinition Width="8*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Text="Name" VerticalOptions="Center" FontAttributes="Bold" Grid.Column="0"/>
+                                <Entry HorizontalOptions="Fill" Grid.Column="1" HorizontalTextAlignment="End" Text="{Binding PlantTask.Name}" FontAttributes="Italic"
+                                       InputTransparent="{Binding IsNotEditing}" BackgroundColor="Transparent">
+                                    <Entry.Effects>
+                                        <customEffects:BorderlessEffect />
+                                    </Entry.Effects>
+                                </Entry>
+                            </Grid>
+                        </customControls:GradientStackLayout>
+                    </customControls:ShadowLayout>
+
+                    <Grid Margin="10,0,10,10" ColumnSpacing="10" HeightRequest="250">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="5*" />
+                            <ColumnDefinition Width="4*" />
+                        </Grid.ColumnDefinitions>
+
+                        <customControls:ShadowLayout ShadowOpacity="0.3" ShadowRadius="3" OffsetY="2" Padding="0,0,0,2" Grid.Column="0" HorizontalOptions="FillAndExpand">
+                            <customControls:GradientStackLayout GradientDirection="ToTopRight" GradientFromColor="#FCF1C6" GradientToColor="#FAE9A0"
+                                                                Padding="7">
+                                <customControls:GradientStackLayout.Effects>
+                                    <customEffects:RoundedCornerEffect Radius="8" />
+                                </customControls:GradientStackLayout.Effects>
+
+                                <Label Text="Performing on" FontAttributes="Bold" FontSize="20" />
+                                <BoxView HeightRequest="1" Margin="-2,0" Color="Black" />
+                                <CollectionView ItemsSource="{Binding Plants}" Margin="0,0,3,0">
+                                    <CollectionView.ItemsLayout>
+                                        <LinearItemsLayout Orientation="Vertical" ItemSpacing="2" />
+                                    </CollectionView.ItemsLayout>
+
+                                    <CollectionView.ItemTemplate>
+                                        <DataTemplate>
+                                            <StackLayout Orientation="Horizontal" HeightRequest="40" HorizontalOptions="FillAndExpand">
+                                                <customControls:SquaredImage HorizontalOptions="Start" Source="{Binding PrimaryPhoto.Url}" WidthRequest="37" Aspect="AspectFill"
+                                                                             VerticalOptions="Center">
+                                                    <customControls:SquaredImage.Effects>
+                                                        <customEffects:RoundedCornerEffect Radius="4" />
+                                                        <customEffects:BorderEffect Thickness="1.25" Color="#9C841E" />
+                                                    </customControls:SquaredImage.Effects>
+                                                </customControls:SquaredImage>
+                                                <Label HorizontalOptions="FillAndExpand" Text="{Binding Plant.Name}" FontSize="17" VerticalOptions="Center" LineBreakMode="TailTruncation" />
+                                            </StackLayout>
+                                        </DataTemplate>
+                                    </CollectionView.ItemTemplate>
+                                </CollectionView>
+                            </customControls:GradientStackLayout>
+                        </customControls:ShadowLayout>
+
+                        <Grid Grid.Column="1" HorizontalOptions="FillAndExpand">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="77" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+
+                            <customControls:ShadowLayout ShadowOpacity="0.3" ShadowRadius="3" OffsetY="2" Padding="0,0,0,2" VerticalOptions="FillAndExpand"
+                                                         Grid.Row="0">
+                                <customControls:GradientStackLayout GradientDirection="ToTopRight" GradientFromColor="#FCF1C6" GradientToColor="#FAE9A0"
+                                                                    Padding="7,7,7,10">
+                                    <customControls:GradientStackLayout.Effects>
+                                        <customEffects:RoundedCornerEffect Radius="8" />
+                                    </customControls:GradientStackLayout.Effects>
+
+                                    <Label Text="Next up" FontAttributes="Bold" FontSize="20" />
+                                    <BoxView HeightRequest="1" Margin="-2,0" Color="Black" />
+
+                                    <StackLayout Orientation="Horizontal">
+                                        <DatePicker x:Name="DatePicker" Date="{Binding NextOccurrenceDate, Mode=TwoWay}"
+                                                    InputTransparent="{Binding IsNotEditing}">
+                                            <DatePicker.Effects>
+                                                <customEffects:BorderlessEffect />
+                                            </DatePicker.Effects>
+                                        </DatePicker>
+                                    </StackLayout>
+
+                                </customControls:GradientStackLayout>
+                            </customControls:ShadowLayout>
+
+                            <customControls:ShadowLayout ShadowOpacity="0.3" ShadowRadius="3" OffsetY="2" Padding="0,0,0,2" VerticalOptions="FillAndExpand"
+                                                         Grid.Row="1">
+                                <customControls:GradientStackLayout GradientDirection="ToTopRight" GradientFromColor="#F8E07A" GradientToColor="#F6D754"
+                                                                    Padding="7">
+                                    <customControls:GradientStackLayout.Effects>
+                                        <customEffects:RoundedCornerEffect Radius="8" />
+                                    </customControls:GradientStackLayout.Effects>
+
+                                    <Label Text="Recurrence" FontAttributes="Bold" FontSize="20" />
+                                    <BoxView HeightRequest="1" Margin="-2,0" Color="Black" />
+                                
+                                </customControls:GradientStackLayout>
+                            </customControls:ShadowLayout>
+                        </Grid>
+                        
+                    </Grid>
+                </StackLayout>
+
+            </Grid>
+        </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</rootpages:SafeAreaRespectingPage>
