--- a/PlantAlarm/Views/NewPlantPage.xaml
+++ b/PlantAlarm/Views/NewPlantPage.xaml
@@ -12,7 +12,7 @@
                 <customEffects:SafeAreaEffect />
             </StackLayout.Effects>
 
-            <Grid>
+            <Grid VerticalOptions="FillAndExpand">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40" />
                     <RowDefinition Height="*"/>
@@ -26,7 +26,7 @@
                             <!--LEFT TOOLBAR-->
                             <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
                                 <Button Text="← Back" FontSize="16" Command="{Binding BackCommand}" HorizontalOptions="Start" CornerRadius="4"
-                                            FontAttributes="Bold" TextColor="#16825B" Margin="0,3"/>
+                                        FontAttributes="Bold" TextColor="#16825B" Margin="0,3"/>
                             </StackLayout>
 
                             <!--MIDDLE PART-->
@@ -57,8 +57,8 @@
                                         <ColumnDefinition Width="3*" />
                                         <ColumnDefinition Width="8*" />
                                     </Grid.ColumnDefinitions>
-                                    <Label Text="Name" VerticalOptions="Center" FontAttributes="Bold" TextColor="White"/>
-                                    <Entry HorizontalOptions="Fill" Grid.Column="1" HorizontalTextAlignment="End" TextColor="White"
+                                    <Label Text="Name" VerticalOptions="Center" FontAttributes="Bold" TextColor="White" Margin="0,0,15,0"/>
+                                    <Entry HorizontalOptions="FillAndExpand" Grid.Column="1" HorizontalTextAlignment="End" TextColor="White"
                                            Text="{Binding PlantName}" FontAttributes="Italic" BackgroundColor="Transparent">
                                         <Entry.Effects>
                                             <customEffects:BorderlessEffect />
@@ -90,16 +90,16 @@
                             <customControls:GradientStackLayout GradientFromColor="#648A2C" GradientToColor="#7AA835" GradientDirection="ToTopRight" Padding="8" Margin="10">
                                 <StackLayout Orientation="Horizontal">
                                     <Label Text="Picture" FontSize="22" FontAttributes="Bold" TextColor="White"
-                                       VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
-                                    <Button Text="{Binding PhotoOptionsText}" Command="{Binding AddPhotoCommand}" HorizontalOptions="End" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"
-                                            TextColor="#4A6520" BackgroundColor="#C8DEA5" BorderRadius="5" Padding="5,0,5,0" HeightRequest="25"/>
+                                           VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
+                                    <Button Text="{Binding PhotoOptionsText}" Command="{Binding AddPhotoCommand}" HorizontalOptions="End" FontSize="13" FontAttributes="Bold"
+                                            VerticalOptions="Center" TextColor="#4A6520" BackgroundColor="#C8DEA5" BorderRadius="5" Padding="5,0,5,0" HeightRequest="25"/>
                                 </StackLayout>
                                 <BoxView HeightRequest="1" Margin="-3,0,-3,0" Color="White" />
                                 <Label Text="You can add more pictures later to track progress." TextColor="#BDD893" FontAttributes="Italic"
                                        Margin="0,5,0,5" FontSize="11" LineBreakMode="WordWrap" />
                                 <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="Transparent">
                                     <Grid BackgroundColor="Transparent">
-                                        <StackLayout IsVisible="{Binding HasPhoto}" x:Name="ImageContainerStack">
+                                        <Grid x:Name="ImageContainerStack">
                                             <customControls:SquaredImage Source="{Binding PhotoToAdd.Url}" HorizontalOptions="FillAndExpand" Aspect="AspectFill">
                                                 <customControls:SquaredImage.GestureRecognizers>
                                                     <TapGestureRecognizer Command="{Binding ShowPhotoOptionsCommand}" />
@@ -111,10 +111,9 @@
 
                                             </customControls:SquaredImage>
 
-                                            <StackLayout.Behaviors>
-                                                <customBehaviors:FadingBehavior />
-                                            </StackLayout.Behaviors>
-                                        </StackLayout>
+                                            <Label Text="Add a picture by tapping the button above." HorizontalOptions="Center" VerticalOptions="Center" TextColor="White"
+                                                   IsVisible="{Binding HasNoPhoto}"/>
+                                        </Grid>
                                     </Grid>
                                 </StackLayout>
                 
