--- a/PlantAlarm/CustomControls/CalendarDayViewCell.xaml
+++ b/PlantAlarm/CustomControls/CalendarDayViewCell.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="PlantAlarm.CustomControls.CalendarDayViewCell">
     <ViewCell.View>
-        <StackLayout Rotation="90" Margin="-5,-8,3,0">
+        <StackLayout WidthRequest="35">
             <Label Text="{Binding MonthName}" TextColor="#508AE9" FontSize="9"
-                   HorizontalOptions="Center"/>
+                    HorizontalOptions="Center"/>
             <Label Text="{Binding Day}" FontAttributes="Bold" FontSize="16" TextColor="Black"
-                   HorizontalOptions="Center" Margin="0,-5,0,0" />
+                    HorizontalOptions="Center" Margin="0,-5,0,0" />
             <Label Text="{Binding DayName}" FontSize="10" HorizontalOptions="Center" Margin="0,-5,0,0" TextColor="Black"/>
+
         </StackLayout>
     </ViewCell.View>
 </ViewCell>
