--- a/PlantAlarm/Views/RootPages/TodoPage.xaml
+++ b/PlantAlarm/Views/RootPages/TodoPage.xaml
@@ -15,7 +15,7 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40" />
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
                 <!--TOOLBAR-->
@@ -30,12 +30,12 @@
 
                             <!--MIDDLE PART-->
                             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                                <Label Text="Garden" FontSize="18" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black" />
+                                <Label Text="To-dos" FontSize="18" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black" />
                             </StackLayout>
 
                             <!--RIGHT TOOLBAR-->
                             <StackLayout Orientation="Horizontal" HorizontalOptions="End">
-                                <Button Text="New Plant" FontSize="16" Command="{Binding ShowNewPlantPageCommand}" HorizontalOptions="End" 
+                                <Button Text="Today" FontSize="16" Command="{Binding BackToTodayCommand}" HorizontalOptions="End" 
                                         FontAttributes="Bold" TextColor="#16825B" Margin="0,3"/>
                             </StackLayout>
                         </Grid>
@@ -43,25 +43,119 @@
                     </StackLayout>
                 </customControls:ShadowLayout>
 
-                <CollectionView ItemsSource="{Binding CalendarDays}">
-                    <CollectionView.ItemsLayout>
-                        <LinearItemsLayout Orientation="Horizontal" />
-                    </CollectionView.ItemsLayout>
+                <StackLayout Grid.Row="1">
+                    <CollectionView ItemsSource="{Binding CalendarDays}" Grid.Row="1" x:Name="DaysListView" SelectionMode="None"
+                                    HeightRequest="52" Margin="0,3,0,3">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout Orientation="Horizontal" />
+                        </CollectionView.ItemsLayout>
 
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout>
-                                <Label Text="{Binding MonthName}" TextColor="#508AE9" FontSize="9"
-                                       HorizontalOptions="Center"/>
-                                <Label Text="{Binding Day}" FontAttributes="Bold" FontSize="16" TextColor="Black"
-                                       HorizontalOptions="Center" Margin="0,-5,0,0" />
-                                <Label Text="{Binding DayName}" FontSize="10" HorizontalOptions="Center" Margin="0,-5,0,0" TextColor="Black"/>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout WidthRequest="35" Padding="0,1,0,0" customEffects:StBorderEffect.Thickness="{Binding BorderWidth}">
+                                    <Label Text="{Binding MonthName}" TextColor="#508AE9" FontSize="9"
+                                            HorizontalOptions="Center"/>
+                                    <Label Text="{Binding Day}" FontAttributes="Bold" FontSize="16" TextColor="Black"
+                                            HorizontalOptions="Center" Margin="0,-5,0,0" />
+                                    <Label Text="{Binding DayName}" FontSize="10" HorizontalOptions="Center" Margin="0,-5,0,0" TextColor="Black"/>
+
+                                    <StackLayout.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding SelectedDayChangedCommand}" CommandParameter="{Binding .}" />
+                                    </StackLayout.GestureRecognizers>
+
+                                    <StackLayout.Effects>
+                                        <customEffects:RoundedCornerEffect Radius="5" />
+                                        <customEffects:BorderEffect Color="#ff5852" />
+                                    </StackLayout.Effects>
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+
+                    <CollectionView ItemsSource="{Binding ActivitiesForDay}" VerticalOptions="FillAndExpand"	
+                                    x:Name="ActivityListView">
+                        <CollectionView.ItemTemplate>	
+                            <DataTemplate>
+                                <customControls:ShadowLayout OffsetY="3" ShadowRadius="4" ShadowOpacity="0.4" Padding="10,0,10,3" Margin="0,5">
+                                    <customControls:GradientStackLayout GradientFromColor="#FBED83" GradientToColor="#F7DC67" GradientDirection="ToRight"
+                                                                HeightRequest="80" Padding="7">
+                                        <customControls:GradientStackLayout.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding ActivityTappedCommand}" CommandParameter="{Binding .}" />
+                                        </customControls:GradientStackLayout.GestureRecognizers>
+                                            
+                                        <StackLayout Orientation="Horizontal" Margin="0,0,10,3">	
+                                            <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand">	
+                                                <Label Text="{Binding Name}" FontAttributes="Bold" TextColor="White"/>	
+                                                <CollectionView ItemsSource="{Binding Plants}" InputTransparent="false">	
+                                                    <CollectionView.ItemsLayout>	
+                                                        <GridItemsLayout Orientation="Horizontal" Span="1" VerticalItemSpacing="3"	
+                                                                            HorizontalItemSpacing="5"/>	
+                                                    </CollectionView.ItemsLayout>	
+                                                    <CollectionView.ItemTemplate>	
+                                                        <DataTemplate>	
+                                                            <StackLayout>	
+                                                                <Image Source="{Binding Photo.Url}" HeightRequest="50" WidthRequest="50"	
+                                                                        Aspect="AspectFill">	
+                                                                    <Image.Effects>	
+                                                                        <customEffects:RoundedCornerEffect Radius="5" />	
+                                                                        <customEffects:BorderEffect Thickness="1.5" Color="White" />	
+                                                                    </Image.Effects>	
+                                                                    <Image.GestureRecognizers>	
+                                                                        <TapGestureRecognizer Command="{Binding PlantImageTappedCommand}" 	
+                                                                                                CommandParameter="{Binding Plant}" />	
+                                                                    </Image.GestureRecognizers>	
+                                                                </Image>	
+                                                            </StackLayout>	
+                                                        </DataTemplate>	
+                                                    </CollectionView.ItemTemplate>	
+                                                </CollectionView>	
+                                            </StackLayout>	
+                                            <CheckBox IsChecked="{Binding PlantActivityItem.IsCompleted, Mode=TwoWay}" HorizontalOptions="End" />	
+                                        </StackLayout>
+
+                                        
+                                        <customControls:GradientStackLayout.Effects>
+                                            <customEffects:RoundedCornerEffect Radius="7" />
+                                        </customControls:GradientStackLayout.Effects>
+                                    </customControls:GradientStackLayout>
+                                </customControls:ShadowLayout>
+                            </DataTemplate>	
+                        </CollectionView.ItemTemplate>	
+                    </CollectionView>
+
+                    <Grid Margin="10,2,10,10" VerticalOptions="End" HeightRequest="65">	
+                        <Grid.ColumnDefinitions>	
+                            <ColumnDefinition Width="*" />	
+                            <ColumnDefinition Width="*" />	
+                        </Grid.ColumnDefinitions>	
+
+                        <Button Text="Complete all" BackgroundColor="#ECF1F9" TextColor="#2E5DA9" FontAttributes="Bold" BorderColor="#B5C8E7" BorderWidth="1"	
+                                Command="{Binding CompleteAllCommand}" HorizontalOptions="FillAndExpand" Grid.Column="0" CornerRadius="8"/>	
+                        <Button Text="Delay all" BackgroundColor="#ECF1F9" TextColor="#E71B4E" FontAttributes="Bold" BorderColor="#E71B4E" BorderWidth="1"	
+                                Command="{Binding DelayAllCommand}" HorizontalOptions="FillAndExpand" Grid.Column="1" CornerRadius="8"/>	
+                    </Grid>
+
+                </StackLayout>
 
             </Grid>
         </StackLayout>
     </ContentPage.Content>
+
+    <ContentPage.Resources>
+        <Style TargetType="Frame">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="#EAF7F2" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </ContentPage.Resources>
 </rootpages:SafeAreaRespectingPage>
